--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Challenge mundiale implemented crawler",
   "main": "./src/index.js",
   "scripts": {
+    "start": "npm run build && pm2 ./build/index.js",
+    "build": "babel ./src --out-dir ./build",
+    "start:dev": "nodemon --exec babel-node --presets=env ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tiago R. data costa",
@@ -13,5 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^2.0.3"
   }
 }
