--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "Tiago R. data costa",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3"
   }
