Changes better perfomance and resolve errors

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run build && pm2 ./build/index.js",
     "build": "babel ./src --out-dir ./build",
     "start:dev": "nodemon --exec babel-node --presets=env ./src/index.js",
+    "playredis": "nodemon --exec babel-node --presets=env ./src/playredis.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tiago R. data costa",
