--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel ./src --out-dir ./build",
     "start:dev": "nodemon --exec babel-node --presets=env ./src/index.js",
     "playredis": "nodemon --exec babel-node --presets=env ./src/playredis.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --colors --require @babel/register --require ./tests/config.js ./tests/**/*.spec.js"
   },
   "author": "Tiago R. data costa",
   "license": "ISC",
@@ -24,8 +24,16 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^2.0.3"
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2",
+    "nodemon": "^2.0.4",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   }
 }
