--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
     "presets": [
-        "@babel/preset-env"
+        "@babel/env"
     ],
     "plugins": [
-        [
-            "@babel/transform-runtime"
-        ]
+        "@babel/proposal-class-properties",
+        "@babel/plugin-transform-runtime"
     ]
 }
