--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && pm2 ./build/index.js",
     "build": "babel ./src --out-dir ./build",
-    "start:dev": "nodemon --exec babel-node --presets=env ./src/index.js",
+    "start:dev": "nodemon --exec babel-node -- ./src/index.js",
     "test:unit": "mocha --exit --colors --require @babel/register --require ./tests/config.js ./tests/unit//**/*.spec.js",
     "test:integration": "mocha --exit --colors --require @babel/register --require ./tests/config.js ./tests/integration/**/*.spec.js",
     "test": "npm run test:unit && npm run test:integration"
@@ -25,11 +25,13 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/register": "^7.9.0",
-    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
