--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "redis": "^3.0.2",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {
