--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "npm run build && pm2 ./build/index.js",
     "build": "babel ./src --out-dir ./build",
     "start:dev": "nodemon --exec babel-node -- ./src/index.js",
-    "test:unit": "mocha --exit --colors --require @babel/register --require ./tests/config.js ./tests/unit//**/*.spec.js",
-    "test:integration": "mocha --exit --colors --require @babel/register --require ./tests/config.js ./tests/integration/**/*.spec.js",
+    "test:unit": " NODE_ENV=testing mocha --exit --colors --require @babel/register --require ./tests/config.js ./tests/unit//**/*.spec.js",
+    "test:integration": "NODE_ENV=testing  mocha --exit --colors --require @babel/register --require ./tests/config.js ./tests/integration/**/*.spec.js",
     "test": "npm run test:unit && npm run test:integration"
   },
   "author": "Tiago R. data costa",
