--- a/k8s/redis.yml
+++ b/k8s/redis.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: redis
     spec:
+      serviceAccountName: jenkins
       containers:
       - name: redis
         image: redis
